Update 5.2 Design identification and authentication strategy (e.g. people, devices and services).md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.2 Design identification and authentication strategy (e.g. people, devices and services).md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.2 Design identification and authentication strategy (e.g. people, devices and services).md
@@ -492,3 +492,259 @@ FIM expands the scope by enabling users to authenticate once and access not only
 </details>
 
 ---
+
+## 5.2.6 Credential management systems (e.g., Password vault) ##
+
+Credential management systems are essential for securing authentication mechanisms by storing, retrieving, and managing credentials such as usernames, passwords, and cryptographic keys. These systems ensure strong security controls, reduce password reuse, and help mitigate unauthorized access.
+
+Modern web browsers offer built-in credential management functionalities that store and autofill usernames and passwords. While convenient, these features present security risks if not properly managed.
+
+- Browsers like Google Chrome, Mozilla Firefox, and Microsoft Edge encrypt stored credentials but can be vulnerable to attacks if the master password or system is compromised.
+- Web browsers also support password managers that integrate with them for enhanced security and cross-device synchronization.
+- Many browsers implement WebAuthn to support passwordless authentication methods, such as FIDO2 security keys and biometrics.
+
+**IDaaS** solutions provide cloud-based identity and access management (IAM), enabling organizations to manage user authentication and access across multiple platforms. IDaaS enhances security by centralizing authentication and reducing reliance on local password storage. Common features are Single Sign-On (SSO), Multi-Factor Authentication (MFA), Role-Based Access Control (RBAC), and adaptive authentication.
+
+**Credential manager applications**, also known as password managers, securely store and encrypt user credentials. They often integrate with browsers and mobile devices for ease of access.
+- Popular tools: Bitwarden, 1Password, LastPass, Dashlane, and KeePass.
+- These applications offer zero-knowledge encryption, autofill capabilities, password generators, and breach monitoring.
+- They mitigate credential reuse and phishing attacks by encouraging the use of strong, unique passwords.
+
+The World Wide Web Consortium (W3C) has introduced standards to improve credential handling on the web:
+- Credential Management API (CredMan API): Enables web applications to access stored credentials, reducing friction in authentication.
+- Web Authentication API (WebAuthn): A core component of FIDO2, allowing for strong, phishing-resistant authentication through hardware security keys and biometrics.
+- Federated Credential Management (FedCM): Enhances federated login systems by improving privacy and security while reducing reliance on third-party cookies.
+
+### Open Questions ###
+
+1. What are credential management systems, and why are they essential for securing authentication mechanisms?  
+<details>
+  <summary>Show answer</summary>
+Credential management systems are responsible for securely storing, retrieving, and managing authentication credentials such as usernames, passwords, and cryptographic keys. They are essential for ensuring strong security controls, reducing password reuse, and mitigating unauthorized access.
+</details>
+
+2. How do modern web browsers handle credential management, and what risks are associated with these features?  
+<details>
+  <summary>Show answer</summary>
+Modern web browsers like Google Chrome, Mozilla Firefox, and Microsoft Edge offer built-in credential management features, which store and autofill usernames and passwords for convenience. However, these features pose security risks, especially if the system is compromised, as attackers could gain access to stored credentials.
+</details>
+
+3. How do web browsers protect stored credentials, and what vulnerabilities might still exist?  
+<details>
+  <summary>Show answer</summary>
+Web browsers encrypt stored credentials to protect them, but they can still be vulnerable to attacks if the master password or the system itself is compromised. If an attacker gains access to the user's device or system, they may be able to retrieve the credentials.
+</details>
+
+4. What are password managers, and how do they enhance security compared to browsers’ built-in credential management?  
+<details>
+  <summary>Show answer</summary>
+Password managers, or credential manager applications, are tools that securely store and encrypt user credentials. Unlike browsers, they offer stronger security by encouraging the use of unique, strong passwords, and integrating with multiple platforms and devices for convenience.
+</details>
+
+5. What authentication methods do modern browsers support, such as WebAuthn, and what are their benefits?  
+<details>
+  <summary>Show answer</summary>
+Modern browsers support passwordless authentication methods through WebAuthn, part of the FIDO2 standard. These methods, such as using security keys and biometrics, provide stronger, phishing-resistant authentication by removing the reliance on passwords altogether.
+</details>
+
+6. What is IDaaS (Identity as a Service), and how does it enhance security for organizations?  
+<details>
+  <summary>Show answer</summary>
+IDaaS (Identity as a Service) is a cloud-based identity and access management solution that allows organizations to manage user authentication and access across various platforms. It enhances security by centralizing authentication processes and reducing reliance on local password storage.
+</details>
+
+7. What are the common features of IDaaS solutions, and how do they contribute to improved security?  
+<details>
+  <summary>Show answer</summary>
+Common features of IDaaS solutions include Single Sign-On (SSO), Multi-Factor Authentication (MFA), Role-Based Access Control (RBAC), and adaptive authentication. These features enhance security by ensuring that users are properly authenticated, reducing unauthorized access, and improving the overall management of credentials.
+</details>
+
+8. What are some popular password managers, and what features do they offer to improve security?  
+<details>
+  <summary>Show answer</summary>
+Popular password managers include Bitwarden, 1Password, LastPass, Dashlane, and KeePass. These tools offer features like zero-knowledge encryption, autofill capabilities, password generators, and breach monitoring to ensure users' credentials are securely stored and managed.
+</details>
+
+9. How do password managers mitigate risks like credential reuse and phishing attacks?  
+<details>
+  <summary>Show answer</summary>
+Password managers mitigate credential reuse and phishing attacks by generating and storing strong, unique passwords for each account. They also reduce the risk of users reusing passwords across multiple sites, making it harder for attackers to gain access to multiple services if one password is compromised.
+</details>
+
+10. What are the main W3C standards for credential management on the web, and what do they aim to improve?  
+<details>
+  <summary>Show answer</summary>
+The main W3C standards for credential management include the Credential Management API (CredMan API), which allows web applications to access stored credentials, the Web Authentication API (WebAuthn) for phishing-resistant authentication, and Federated Credential Management (FedCM), which improves privacy and security while reducing reliance on third-party cookies in federated login systems.
+</details>
+
+---
+
+## 5.2.7 Single sign-on (SSO) ##
+
+Single Sign-On (SSO) is an authentication mechanism that allows users to log in once and gain access to multiple systems without needing to re-enter credentials. It enhances security, improves user experience, and simplifies identity management.
+
+SSO operates using authentication protocols like SAML (Security Assertion Markup Language), OAuth, OpenID Connect, and Kerberos. These protocols allow identity providers (IdPs) to verify user credentials and grant access to service providers (SPs) without requiring additional logins, following these steps:
+
+1. User Authentication: The user logs in through an IdP, such as Active Directory or an enterprise IAM (Identity and Access Management) system.
+2. Token Generation: The IdP generates an authentication token (e.g., SAML assertion or OAuth token).
+3. Access to Services: The token is presented to different service providers, which validate it and grant access without requiring separate authentication.
+
+Security Benefits of SSO are:
+- Reduces Password Fatigue – Users only need to remember one strong password.
+- Minimizes Phishing Risks – Since users log in fewer times, the attack surface for credential theft is smaller.
+- Enhances Access Control – Centralized authentication allows for better policy enforcement and monitoring.
+- Improves Incident Response – If a compromise occurs, access can be revoked centrally.
+
+Risks and Mitigations of using SSO systems:
+- Single Point of Failure (SPOF): If the IdP is compromised, all linked services are at risk. Mitigation: Use multi-factor authentication (MFA) and redundancy.
+- Session Hijacking: Attackers could steal authentication tokens. Mitigation: Implement secure token handling and session expiration policies.
+- Credential Theft: A stolen SSO password could grant broad access. Mitigation: Enforce strong passwords, MFA, and user behavior monitoring.
+
+### Open Questions ###
+
+1. What is Single Sign-On (SSO), and how does it improve security and user experience?  
+<details>
+  <summary>Show answer</summary>
+Single Sign-On (SSO) is an authentication mechanism that allows users to log in once and access multiple systems without needing to re-enter their credentials. It enhances security by reducing the frequency of logins, improves the user experience by simplifying access, and simplifies identity management by centralizing authentication.
+</details>
+
+2. What authentication protocols are commonly used in Single Sign-On (SSO)?  
+<details>
+  <summary>Show answer</summary>
+Authentication protocols commonly used in SSO include SAML (Security Assertion Markup Language), OAuth, OpenID Connect, and Kerberos. These protocols enable identity providers (IdPs) to verify user credentials and grant access to service providers (SPs) without requiring additional logins.
+</details>
+
+3. How does Single Sign-On (SSO) work in terms of user authentication, token generation, and access to services?  
+<details>
+  <summary>Show answer</summary>
+In Single Sign-On (SSO), a user logs in through an identity provider (IdP), such as Active Directory or an enterprise IAM system. The IdP generates an authentication token (like a SAML assertion or OAuth token), which is presented to various service providers (SPs) for validation. Once validated, the user gains access to the services without needing to authenticate separately.
+</details>
+
+4. What are the security benefits of using Single Sign-On (SSO)?  
+<details>
+  <summary>Show answer</summary>
+The security benefits of using SSO include reducing password fatigue by requiring only one password, minimizing phishing risks by reducing the number of login attempts, enhancing access control by centralizing authentication and monitoring, and improving incident response by enabling centralized access revocation.
+</details>
+
+5. How does Single Sign-On (SSO) help reduce password fatigue for users?  
+<details>
+  <summary>Show answer</summary>
+Single Sign-On (SSO) reduces password fatigue by requiring users to remember only one strong password for access to multiple services, eliminating the need for numerous passwords for different accounts.
+</details>
+
+6. How does Single Sign-On (SSO) minimize phishing risks?  
+<details>
+  <summary>Show answer</summary>
+SSO minimizes phishing risks because users log in fewer times, reducing the opportunities for attackers to intercept credentials. With fewer login prompts, the attack surface for credential theft is smaller.
+</details>
+
+7. How does Single Sign-On (SSO) enhance access control?  
+<details>
+  <summary>Show answer</summary>
+SSO enhances access control by allowing centralized authentication, which enables better enforcement of authentication policies, user roles, and permissions across multiple services.
+</details>
+
+8. How does Single Sign-On (SSO) improve incident response?  
+<details>
+  <summary>Show answer</summary>
+Single Sign-On (SSO) improves incident response because if an authentication compromise occurs, access can be revoked centrally, preventing further unauthorized access to multiple systems simultaneously.
+</details>
+
+9. What is the risk of a Single Point of Failure (SPOF) in SSO systems, and how can it be mitigated?  
+<details>
+  <summary>Show answer</summary>
+The Single Point of Failure (SPOF) risk in SSO systems arises if the identity provider (IdP) is compromised, leading to potential access breaches for all linked services. To mitigate this, organizations can implement multi-factor authentication (MFA) and redundancy for critical infrastructure.
+</details>
+
+10. What are the risks of session hijacking and credential theft in SSO systems, and how can they be mitigated?  
+<details>
+  <summary>Show answer</summary>
+The risks of session hijacking and credential theft in SSO systems can lead to unauthorized access. Mitigations include secure token handling, session expiration policies, strong password enforcement, and multi-factor authentication (MFA) to reduce the chances of these risks materializing. Additionally, continuous user behavior monitoring can help detect suspicious activity early.
+</details>
+
+----
+
+## 5.2.8 Just-In-Time ##
+
+Just-in-time (JIT) means getting what you need only when you need it. In manufacturing, companies receive parts just before production starts, avoiding unnecessary storage and inventory management. 
+
+:necktie: Just-in-time (JIT) is a strategic approach that optimizes resource allocation by providing materials, access, or services **only when needed**, reducing waste and increasing efficiency. In leadership, JIT decision-making ensures that critical choices are made at the most informed moment, balancing agility with risk management. For workforce management, JIT staffing allows companies to scale teams dynamically, ensuring the right talent is available at the right time without unnecessary overhead.
+
+In cybersecurity, JIT works the same way but for access control. Instead of giving users permanent high-level access, JIT grants temporary elevated privileges only when required. For example, if a user needs to run a report once a month on a sensitive database, they get special access only for that task and then lose it immediately after. This reduces security risks, prevents unnecessary privilege escalation, and is often automated for efficiency.
+
+JIT access helps enforce the principle of least privilege, giving users or non-human identities the minimum permissions needed to do their job. It should  also align with an organization’s Identity Access Management (IAM), IT Service Management (ITSM), and Privileged Access Management (PAM) policies, ensuring access is controlled through proper workflows and approvals. Additionally, JIT access must maintain a detailed audit trail of privileged activities, allowing organizations to track who accessed which systems, what actions they took, and for how long. Some privileged access management tools even offer the ability to monitor active sessions and terminate risky behavior in real-time to enhance security further.
+
+:bulb: Types of Just-In-Time (JIT) Access:
+
+1. Broker and Remove Access
+In this method, users need to provide a reason for why they need access to a specific system or resource for a set amount of time. Users typically have a shared privileged account, but the credentials for that account are securely managed and rotated in a central system (vault). Access is granted for the required period and then removed afterward.
+2. Ephemeral Accounts
+These are temporary, one-time-use accounts that are created when needed and automatically deleted or deactivated after the task is completed. This ensures that the account can only be used once, reducing the risk of long-term misuse.
+3. Temporary Elevation
+This method allows users to temporarily gain higher-level permissions or privileges to perform specific tasks. Access is granted on request and for a limited time, after which the elevated privileges are automatically revoked once the time is up, ensuring the user doesn’t retain unnecessary access.
+
+Here’s a simple workflow for enabling JIT access. The key idea is that users start with no default privileges (zero standing access):
+
+``` mermaid
+sequenceDiagram
+    participant User
+    participant PolicyOrAdmin as Policy/Admin
+    participant System
+
+    User->>PolicyOrAdmin: Requests privileged access
+    PolicyOrAdmin-->>User: Approve or Deny request
+    alt Approved
+        PolicyOrAdmin->>User: Send access granted notification
+        User->>System: Access system with elevated privileges
+        System-->>User: Perform specific task
+        User->>System: Task completed, logs off
+        System-->>User: Revoke/delete privileged access
+    else Denied
+        PolicyOrAdmin->>User: Send access denied notification
+    end
+```
+
+### Open Questions ###
+
+What does Just-in-Time (JIT) mean, and how does it apply in manufacturing, leadership, and workforce management?
+
+<details> <summary>Show answer</summary> Just-in-Time (JIT) refers to receiving or providing what is needed only when it is required. In manufacturing, it ensures parts are delivered just before production starts, reducing the need for storage and inventory management. In leadership, JIT decision-making means making critical choices at the most informed moment, balancing agility with risk management. In workforce management, JIT staffing allows companies to scale teams dynamically, ensuring the right talent is available at the right time without unnecessary overhead. </details>
+
+How does Just-in-Time (JIT) access control work in cybersecurity?
+
+<details> <summary>Show answer</summary> JIT access control in cybersecurity grants users temporary elevated privileges only when needed, rather than providing permanent high-level access. For example, a user needing access to a sensitive database to run a report is granted access only for the duration of that task, reducing security risks and preventing unnecessary privilege escalation. </details>
+
+What is the principle of least privilege, and how does JIT access help enforce it?
+
+<details> <summary>Show answer</summary> The principle of least privilege ensures users or systems are granted only the minimum access necessary to perform their tasks. JIT access enforces this by providing privileges only for the time required, ensuring no one retains excessive access beyond their immediate needs. </details>
+
+How does Just-in-Time (JIT) access align with IAM, ITSM, and PAM policies?
+
+<details> <summary>Show answer</summary> JIT access aligns with Identity Access Management (IAM), IT Service Management (ITSM), and Privileged Access Management (PAM) policies by ensuring access is controlled through proper workflows and approvals. Access is granted only after verifying the need, reducing the risk of unauthorized or unnecessary access. </details>
+
+Why is maintaining an audit trail important for Just-in-Time (JIT) access in cybersecurity?
+
+<details> <summary>Show answer</summary> Maintaining an audit trail is crucial because it tracks who accessed systems, what actions they took, and for how long. This transparency ensures accountability, compliance, and security, enabling organizations to detect suspicious activity and respond appropriately. </details>
+
+How can privileged access management tools enhance security during JIT access?
+
+<details> <summary>Show answer</summary> Privileged access management (PAM) tools enhance security by offering real-time monitoring of active sessions, tracking privileged activities, and terminating risky behavior. They also securely manage and rotate credentials, reducing the risk of unauthorized access or misuse. </details>
+
+What is the "Broker and Remove Access" method of Just-in-Time (JIT) access, and how does it work?
+
+<details> <summary>Show answer</summary> Broker and Remove Access is a JIT method where users request access for a specific task and duration. Credentials are securely managed in a central vault, access is granted temporarily, and then automatically removed after the task, reducing long-term misuse risks. </details>
+
+What are Ephemeral Accounts, and how do they contribute to Just-in-Time (JIT) access control?
+
+<details> <summary>Show answer</summary> Ephemeral Accounts are temporary, one-time-use accounts created when needed and automatically deleted after the task is completed. They ensure access exists only for the task duration, minimizing the risk of unauthorized long-term access. </details>
+
+How does the Temporary Elevation method of Just-in-Time (JIT) access work, and what is its purpose?
+
+<details> <summary>Show answer</summary> Temporary Elevation grants users higher-level privileges for a specific task. Access is limited to a defined period and automatically revoked after completion, preventing unnecessary retention of elevated privileges. </details>
+
+What is the workflow for enabling Just-in-Time (JIT) access, and what are the key steps involved?
+
+<details> <summary>Show answer</summary> The JIT access workflow includes: 1. User requests privileged access to a system (e.g., server or network device). 2. Request is reviewed and either approved or denied based on policy or by an administrator. 3. If approved, the user is notified and granted temporary elevated access. 4. User performs the task, and access is automatically revoked or deleted afterward. This process can be automated to improve efficiency and reduce human error. </details>
+
+---
+
